tests/resource/valid/collection/dictionary.mamba
def j := { 10 => 200, 30 => 5 }

def i := { 10 => "9", 20 => "6" }
