tests/resource/invalid/type/collection/set_not_subscriptable.mamba
def x := {0, "asdf", 51}
x[0]
